communicate from child to parent

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -28,7 +28,7 @@ body {
     border: 1px solid $btnBorder;
     width: 70px;
     background: $btnBg;
-    color: #ff9b00;
+    color: #fff;
     font-weight: 700;
     cursor: pointer;
 
