--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -80,6 +80,7 @@ body {
     display: flex;
     align-items: end;
     justify-content: left;
+    width: 100vw;
     background: $navBg;
     min-height: 60px;
     padding: 10px;
@@ -104,7 +105,8 @@ body {
     }
 
     h1 {
-      letter-spacing: 20px;
+      letter-spacing: 0.87em;
+      ;
 
       &:hover {
         color: $btnBorder;
@@ -237,5 +239,41 @@ body {
   100% {
     transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
     -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
+}
+
+
+@media (max-width: 450px) {
+  .app {
+    nav {
+      h1 {
+        letter-spacing: 0.57em;
+      }
+    }
+  }
+}
+
+@media (max-width: 403px) {
+  .app {
+    nav {
+      h1 {
+        letter-spacing: 0.10em;
+      }
+    }
+  }
+
+  .todo-form {
+    display: flex;
+    flex-direction: column;
+
+    .input-item {
+      margin-bottom: 0.7em;
+    }
+
+    .btn {
+      position: relative;
+      left: 4em;
+      width: 12em;
+    }
   }
 }
